--- a/JSONVisualizer/Views/ContentList.xaml
+++ b/JSONVisualizer/Views/ContentList.xaml
@@ -14,38 +14,12 @@
             <ColumnDefinition Width="52*" />
         </Grid.ColumnDefinitions>
 
-        <Button Content="To Source" HorizontalAlignment="Right" Margin="0,10,99,0" VerticalAlignment="Top" Width="75" Command="{Binding ViewCommand}" Grid.Column="1" IsEnabled="{Binding canwork}" Visibility="Hidden" />
-        <Button Content="Delete" HorizontalAlignment="Right" Margin="0,10,10,0" VerticalAlignment="Top" Width="75" Command="{Binding DeleteCommand}" Grid.Column="1" IsEnabled="{Binding canwork}" Visibility="Hidden" />
-
-        <!--
-        <ListView ItemsSource="{Binding Contents}" x:Name="ContentListView" Margin="10,42,10,10">
-            <ListView.View>
-                <GridView>
-                    <GridViewColumn Header="Main" Width="100" DisplayMemberBinding="{Binding main}" />
-                    <GridViewColumn Header="Sub"  Width="100" DisplayMemberBinding="{Binding sub}" />
-                    <GridViewColumn Header="Comment" Width="100" DisplayMemberBinding="{Binding comment}" />
-                </GridView>
-            </ListView.View>
-        </ListView>
--->
-        <!--
-        <DataGrid ItemsSource="{Binding JSONData}" AutoGenerateColumns="True" Grid.ColumnSpan="2" Margin="36,46,24,19">
-        </DataGrid>
-        -->
-        <!--<DataGrid ItemsSource="{Binding JSONData}" AutoGenerateColumns="True" Grid.ColumnSpan="2" Margin="36,46,24,19" IsReadOnly="True" x:Name="Self" CanUserSortColumns="True" SelectedIndex="{Binding nowindex}">
-            <DataGrid.ItemContainerStyle>
-                <Style TargetType="DataGridRow">
-                    <Setter Property=" Value="{Binding TableClickCommand}"></Setter>
-                </Style>
-            </DataGrid.ItemContainerStyle>
-        <i:Interaction.Triggers>
-                <i:EventTrigger EventName="MouseDoubleClick">
-                    <i:InvokeCommandAction Command="{Binding SelectCommand}"
-                                           CommandParameter="{Binding Path=SelectedItem, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=DataGrid}}" />
-                </i:EventTrigger>
-            </i:Interaction.Triggers>
-        </DataGrid> -->
-        <TreeView Margin="36,46,42,19" Grid.ColumnSpan="2" ItemsSource="{Binding TreeItems}">
+        <Button Content="File Open" HorizontalAlignment="Right" Margin="0,10,125,0" VerticalAlignment="Top" Width="75" Command="{Binding FileOpenCommand}" Grid.Column="1" />
+        <TextBox HorizontalAlignment="Left" Height="23" Margin="36,32,0,0" TextWrapping="Wrap" Text="{Binding Path=URL, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" VerticalAlignment="Top" Width="284" Grid.ColumnSpan="2" IsEnabled="{Binding urlmodeornot, UpdateSourceTrigger=PropertyChanged}" />
+        <Button Content="Get by URL" HorizontalAlignment="Right" Margin="0,33,125,0" VerticalAlignment="Top" Width="75" Command="{Binding URLGetCommand}" Grid.Column="1" IsEnabled="{Binding canuseornot}" />
+        <Button Content="To Source" HorizontalAlignment="Right" Margin="0,10,42,0" VerticalAlignment="Top" Width="75" Command="{Binding SourceViewCommand}" Grid.Column="1" IsEnabled="{Binding canwork}" />
+        <CheckBox Content="use URL?" Grid.Column="1" HorizontalAlignment="Left" Margin="143,38,0,0" VerticalAlignment="Top" IsChecked="{Binding urlmodeornot}" />
+        <TreeView Margin="36,58,42,19" Grid.ColumnSpan="2" ItemsSource="{Binding TreeItems}">
             <TreeView.ItemTemplate>
                 <HierarchicalDataTemplate ItemsSource="{Binding Children}">
                     <!--<TextBlock Text="{Binding Name}"+ " - " + " {Binding Value}" />-->
@@ -60,6 +34,5 @@
                 </HierarchicalDataTemplate>
             </TreeView.ItemTemplate>
         </TreeView>
-        <Button Content="Open" HorizontalAlignment="Right" Margin="0,10,154,0" VerticalAlignment="Top" Width="75" Command="{Binding FileOpenCommand}" />
     </Grid>
 </UserControl>
