11:01 useless files deleted

--- a/JSONVisualizer/App.xaml
+++ b/JSONVisualizer/App.xaml
@@ -7,23 +7,15 @@
 			 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 			 xmlns:ignore="http://www.galasoft.ch/ignore"
 			 StartupUri="MainWindow.xaml"
-			 mc:Ignorable="d ignore">
+			 mc:Ignorable="d ignore"
+             ShutdownMode="OnMainWindowClose">
 
     <Application.Resources>
         <!--Global View Model Locator-->
         <vm:ViewModelLocator x:Key="Locator"
 							 d:IsDataSource="True" />
-        <DataTemplate DataType="{x:Type vm:ContentAddViewModel}">
-            <view:ContentAdd />
-        </DataTemplate>
         <DataTemplate DataType="{x:Type vm:ContentListViewModel}">
             <view:ContentList />
-        </DataTemplate>
-        <DataTemplate DataType="{x:Type vm:ContentViewViewModel}">
-            <view:ContentView />
-        </DataTemplate>
-        <DataTemplate DataType="{x:Type vm:ContentModifyViewModel}">
-            <view:ContentModify />
         </DataTemplate>
     </Application.Resources>
 </Application>
