--- a/JSONVisualizer/Views/ContentList.xaml
+++ b/JSONVisualizer/Views/ContentList.xaml
@@ -13,9 +13,9 @@
             <ColumnDefinition Width="53*" />
             <ColumnDefinition Width="52*" />
         </Grid.ColumnDefinitions>
-
+        <Label HorizontalAlignment="Left" Height="31" Margin="36,7,0,0" Content="{Binding FilePath, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Top" Width="284" Grid.ColumnSpan="2" Focusable="True" AllowDrop="True"  />
         <Button Content="File Open" HorizontalAlignment="Right" Margin="0,10,125,0" VerticalAlignment="Top" Width="75" Command="{Binding FileOpenCommand}" Grid.Column="1" />
-        <TextBox HorizontalAlignment="Left" Height="23" Margin="36,32,0,0" TextWrapping="Wrap" Text="{Binding Path=URL, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" VerticalAlignment="Top" Width="284" Grid.ColumnSpan="2" IsEnabled="{Binding urlmodeornot, UpdateSourceTrigger=PropertyChanged}" />
+        <TextBox HorizontalAlignment="Left" Height="23" Margin="36,32,0,0" MaxLines="1" Text="{Binding Path=URL, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" VerticalAlignment="Top" Width="284" Grid.ColumnSpan="2" IsEnabled="{Binding urlmodeornot, UpdateSourceTrigger=PropertyChanged}" />
         <Button Content="Get by URL" HorizontalAlignment="Right" Margin="0,33,125,0" VerticalAlignment="Top" Width="75" Command="{Binding URLGetCommand}" Grid.Column="1" IsEnabled="{Binding canuseornot}" />
         <Button Content="To Source" HorizontalAlignment="Right" Margin="0,10,42,0" VerticalAlignment="Top" Width="75" Command="{Binding SourceViewCommand}" Grid.Column="1" IsEnabled="{Binding canwork}" />
         <CheckBox Content="use URL?" Grid.Column="1" HorizontalAlignment="Left" Margin="143,38,0,0" VerticalAlignment="Top" IsChecked="{Binding urlmodeornot}" />
@@ -26,7 +26,7 @@
                     <TextBlock>
                         <TextBlock.Text>
                             <MultiBinding StringFormat="{}{0} : {1}">
-                                <Binding Path="Name" />
+                                <Binding Path="Key" />
                                 <Binding Path="Value" />
                             </MultiBinding>
                         </TextBlock.Text>
@@ -34,6 +34,8 @@
                 </HierarchicalDataTemplate>
             </TreeView.ItemTemplate>
         </TreeView>
+        
         <Label Content="Loading..." Background="AntiqueWhite" HorizontalAlignment="Left" Margin="21,7,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2" Height="77" Width="485" FontSize="48" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Visibility="{Binding loadingstring}" />
+        
     </Grid>
 </UserControl>
